# artificial

./: .gitignore  .pre-commit-config.yaml  .prettierrc  Cargo.toml  Makefile  README.md  sample.bash
src/: api_client.rs  main.rs
src/api/: claude.rs  mod.rs  openai.rs  sse.rs
src/emitter/: memory_emitter.rs  mod.rs  queue.rs  sse_emitter.rs
src/handlers/: claude_handler.rs  mod.rs  openai_handler.rs  sse_handler.rs
src/routes/: claude_route.rs  mod.rs  openai_route.rs  sse_route.rs
static/: index.html
static/css/: app.css  app.min.css  prism.css
static/js/: .eslintrc.yaml  app.js  app.min.js  prism.js
