[package]
name = "artificial"
version = "0.1.0"
authors = ["Sam Wang"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest-eventsource = "0.5.0"
warp = "0.3"
once_cell = "1.18"
bytes = "1.5"
uuid = { version = "1.0", features = ["v4"] }
dashmap = "5.5"
anyhow = "1"
chrono = "0.4"
chrono-tz = "0.8"
